# mia

./: Cargo.toml  README.md  flake.nix  mia.rs
.github/workflows/: check-mia-installer.yaml  check-mia.yaml  release-mia-installer.yaml  release-mia.yaml  run-tests.yaml
mia/: Cargo.toml  README.md
mia-installer/: Cargo.toml  README.md  build.rs  install_mia.rs  lib.rs
mia-installer/src/: lib.rs
mia-rt-config/: Cargo.toml  README.md
mia-rt-config/src/: lib.rs
mia-rt-config/src/v1/: mod.rs
mia-rt-config/tests/: test_deserialization.rs
mia/.cargo/: config.toml
mia/src/: command.rs  kernel_modules.rs  logger.rs  mia.rs  modprobe.rs  mount.rs  pre_exit.rs  qemu.rs  rt_config.rs
pre-built-deps/: kmod
