[package]
name = "mia-installer"
version = "0.2.5"
edition = "2021"
authors = ["Gevulot Team"]
repository = "https://github.com/gevulotnetwork/mia"

[[bin]]
name = "install-mia"
path = "mia-installer/install_mia.rs"

[lib]
path = "mia-installer/lib.rs"

[dependencies]
gevulot-rs = "0.2"

anyhow = "1"
env_logger = "0.11"
flate2 = "1"
fs_extra = "1"
log = "0.4"
octocrab = "0.41"
reqwest = "0.11"
serde = "1"
serde_yaml = "0.9.34"
structopt = "0.3"
tar = "0.4"
tempdir = "0.3"
tokio = "1"
url = "2"
