# NOTE: hack to avoid workspace conflicts when building mia
[workspace]

[package]
name = "mia"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "mia"
path = "src/mia.rs"

[dependencies]
# TODO: replace rev with tag when possible
gevulot-rs = { git = "https://github.com/gevulotnetwork/gevulot-rs.git", rev = "f6657f57771b1c549a83cfe6fc822c3db687707e" }

env_logger = "0.11.5"
log = "0.4.22"
nix = { version = "0.29", features = ["mount", "reboot"] }
serde_yaml = "0.9.34"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
