# NOTE: hack to avoid workspace conflicts when building mia
[workspace]

[package]
name = "mia"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "mia"
path = "src/mia.rs"

[dependencies]
gevulot-rs = "0.1.3"

env_logger = "0.11.5"
libc = "0.2"
log = "0.4.22"
nix = { version = "0.29", features = ["mount", "reboot", "fs"] }
once_cell = "1"
serde_yaml = "0.9.34"
qemu-exit = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
